Fix warnings and remove large block of unused code
SVN r62193 |2019-02-01 20:45:57 +0000